import mongoose from 'mongoose';

const landSchema = mongoose.Schema({
    description: { type: String, required: true },
    price: { type: Number, required: true },
    location: { type: String, required: true },
    area: { type: Number, required: true }, // Land size
    image: { type: String, required: true },
    owner: {
        type: mongoose.Schema.Types.ObjectId,
        ref: 'User',
        required: true
    }
}, {
    timestamps: true,
    toJSON: { virtuals: true },
    toObject: { virtuals: true }
});

const Land = mongoose.models.Land || mongoose.model('Land', landSchema);

export default Land;
